[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/alienIdle0.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/alienIdle1.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/alienRun0.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/alienRun1.png" type="Texture" id=5]
[ext_resource path="res://assets/Poderes/hiroshiLaser2.png" type="Texture" id=6]
[ext_resource path="res://assets/Poderes/hiroshiLaser3.png" type="Texture" id=7]
[ext_resource path="res://assets/Poderes/hiroshiLaser1.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/alienPunch1.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/alienPunch0.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Run",
"speed": 22.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "Laser",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": false,
"name": "Punch",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.9839, 24.147 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5.61736, 3.53411 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.7764, 24.8158 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.5069, 31.7661 )

[node name="Enemy" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.375517, -2.2531 )
frames = SubResource( 1 )
animation = "Run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.250336, -1.75241 )
shape = SubResource( 2 )

[node name="Mao" type="Area2D" parent="." groups=[
"mao",
]]
collision_layer = 24576
collision_mask = 24576

[node name="Colisao" type="CollisionShape2D" parent="Mao"]
shape = SubResource( 3 )

[node name="Corpo" type="Area2D" parent="." groups=[
"corpo",
]]
collision_layer = 24576
collision_mask = 24576

[node name="Colisao" type="CollisionShape2D" parent="Corpo"]
visible = false
shape = SubResource( 4 )

[node name="Fora" type="Area2D" parent="." groups=[
"fora",
]]
collision_layer = 24576
collision_mask = 24576

[node name="Colisao" type="CollisionShape2D" parent="Fora"]
shape = SubResource( 5 )

[connection signal="area_entered" from="Mao" to="." method="_on_Mao_area_entered"]
[connection signal="body_entered" from="Mao" to="." method="_on_Mao_body_entered"]
[connection signal="body_exited" from="Mao" to="." method="_on_Mao_body_exited"]
[connection signal="body_entered" from="Corpo" to="." method="_on_Corpo_body_entered"]
[connection signal="area_entered" from="Fora" to="." method="_on_Fora_area_entered"]
[connection signal="area_exited" from="Fora" to="." method="_on_Fora_area_exited"]
